deploy/k8s/base/react-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  labels:
    app: react-frontend
spec:
  type: ClusterIP
  selector:
    app: react-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
